Fix vertical spacing between card contents

--- a/src/App.scss
+++ b/src/App.scss
@@ -29,7 +29,7 @@ body {
     .flash-card {
         h2 {
             font-size: 20em;
-            line-height: 1.2em;
+            line-height: 1.25em;
         }
 
         .audio {
